feat(assistant): overhaul local rag retrieval and grounding
Replace the deterministic local embedding path with configurable embedding providers, embedding profiles, and startup validation so assistant-service can run against TEI, Ollama, OpenAI, or the stub provider.

Rework ingestion and retrieval around structured chunks, chunk metadata persistence, hybrid lexical plus vector recall, and a real TEI-backed reranker with heuristic fallback during provider outages.

Expand chat responses to include reasoning summaries, grounded evidence, and answer modes, update the frontend chat workspace to render them, and wire local Docker startup for embedding, reranking, and optional Ollama answer generation.